NEXTEUROPA-5333 Fixed line breaks non ie browsers
Former-commit-id: 813b613544a769d9554178e59a36d2f3b24aeec9

--- a/project/themes/europa/css/style-sass.css
+++ b/project/themes/europa/css/style-sass.css
@@ -7428,7 +7428,6 @@ Styleguide: icon
 
 .icon--after, .btn.btn-ctn:after, .inpage-nav__navbar .btn-ctn.inpage-nav__toggle:after, .btn.btn-menu:after, .inpage-nav__navbar .btn-menu.inpage-nav__toggle:after, .is-external:after, a[href^="http"]:after, .listing__item-link[href^="http"] .listing__title:after, .breadcrumb__link-arrow, .no-js .breadcrumb__segment--first:before, .breadcrumb--collapsible .breadcrumb__btn-separator:after, .breadcrumb--collapsible .breadcrumb__link:after, .breadcrumb--collapsible .breadcrumb__segment.breadcrumb__segment--next-hidden:before, .file__btn:after, .lang-select-page--transparent select.lang-select-page__list:after, .listing__title--arrow:after, .listing--cta .listing__title:after, .site-menu .listing__item .listing__title:after, .notification__content .notification__btn:after {
   text-decoration: none;
-  display: inline-block;
   font-family: 'EuropaIcons';
   speak: none;
   font-style: normal;
