--- a/project/themes/europa/sass/components/_icon.scss
+++ b/project/themes/europa/sass/components/_icon.scss
@@ -72,7 +72,6 @@ Styleguide: icon
 // Should be used only with @extend
 .icon--after {
   text-decoration: none;
-  display: inline-block;
   font-family: 'EuropaIcons';
   speak: none;
   font-style: normal;
